# API-Wallet

./: README.md  docker-compose.yml  manage.py  pyproject.toml
drf_wallet/: celery.py  settings.py  urls.py  wsgi.py
nginx/: main_app.conf
swagger-docs/: Dockerfile  setup.py
swagger-docs/swagger_server/: __main__.py
swagger-docs/swagger_server/controllers/: auth_controller.py  jwt_controller.py  wallet_application_controller.py
swagger-docs/swagger_server/models/: __init__.py  auth_users_body.py  inline_response200.py  inline_response2001.py  inline_response2002.py  inline_response2003.py  inline_response201.py  inline_response400.py  jwt_create_body.py  jwt_verify_body.py  users_activation_body.py  users_me_body.py  users_me_body1.py  users_me_body2.py  users_resend_activation_body.py  users_reset_password_body.py  users_set_password_body.py  v1_balance_body.py  v1_balance_body1.py  v1_transactions_body.py
swagger-docs/swagger_server/swagger/: swagger.yaml
swagger-docs/swagger_server/test/: test_auth_controller.py  (+2 more)
wallet/: admin.py  serializer.py  tasks.py  temporary.py  urls.py  views.py
wallet/migrations/: 0005_remove_transaction_is_expense.py  0006_transaction_kind.py
web/: Dockerfile  pyproject.toml
web/drf_wallet/: asgi.py  celery.py  settings.py  urls.py
web/wallet/: models.py  serializer.py  tasks.py  views.py
web/wallet/migrations/: 0001_initial.py  0002_alter_userbalance_balance.py  0003_transaction.py  0004_alter_transaction_user.py  0007_remove_transaction_datetime_transaction_date.py  0008_alter_transaction_date.py
